# weaviate_doc_helper

./: .gitignore  README.md  app.py  demo.py  docker-compose.yml  helper.py  prompts.py  pyproject.toml  requirements.txt  setup.py  temp.py
src/weaviate_agent_demo/: coder.py  db.py  llm.py  prompts.py  utils.py
src/weaviate_helper/: cli.py  coder.py  db.py  prompts.py  setup.py  tools.py  utils.py
src/weaviate_helper/db_setup/: 1_create_collection.py  2_import.py  3_test_query.py  9_create_cache_collection.py
test/: cli.py  gfl.py  llm.py  misc.py  search.py  tools.py
