[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weaviate_helper"
version = "0.0.1"
description = "Demo project for sometimes (poorly) generating Python code for Weaviate"
authors = [{name = "JP Hwang", email = "me@jphwang.com"}]

[project.scripts]
ask_llm = "weaviate_helper.cli:ask_llm"
ask_basic_ragbot = "weaviate_helper.cli:ask_basic_ragbot"
ask_ragbot_with_reformulation = "weaviate_helper.cli:ask_ragbot_with_reformulation"
ask_ragbot_with_tools = "weaviate_helper.cli:ask_ragbot_with_tools"
safely_ask_ragbot_with_tools = "weaviate_helper.cli:safely_ask_ragbot_with_tools"

[tool.setuptools.packages.find]
where = ["src"]
